Teacher Assignment Container Z-index corrected

--- a/components/teacher/board/histories/assignmentHistory/assignmentDetails/AssignmentDetails.module.css
+++ b/components/teacher/board/histories/assignmentHistory/assignmentDetails/AssignmentDetails.module.css
@@ -18,7 +18,7 @@
     bottom: 0%;
     left: 0;
 
-    z-index: 30;
+    z-index: 20;
   }
   .title {
     font-size: 1rem;
@@ -78,7 +78,7 @@
     bottom: 0;
     left: 0;
 
-    z-index: 10;
+    z-index: 20;
   }
   .title {
     font-size: 1.2rem;
